# mpc2000xl

./: package-lock.json  package.json
docs/: features.md
mpc2000xl-backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
mpc2000xl-backend/app/: main.py  models.py
mpc2000xl-backend/app/routes/: audio.py
mpc2000xl-backend/app/routes/ai/: beat_generation.py
mpc2000xl-backend/tests/: test_audio.py
mpc2000xl-frontend/: .env  README.md  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.test.json
mpc2000xl-frontend/src/: App.tsx  custom.d.ts  index.css  types.ts
mpc2000xl-frontend/src/components/: DataWheel.tsx  HelpTooltip.tsx  LCD.tsx  LevelControl.tsx  Menu.tsx  ModeControls.tsx  Pad.tsx  PadBanks.tsx  PatternManager.tsx  ProgramManager.tsx  QuickHelp.tsx  SampleEditor.tsx  SoundBankSelector.tsx  StepGrid.tsx  ThemeToggle.tsx  TransportControls.tsx
mpc2000xl-frontend/src/components/__tests__/: PatternManager.test.tsx  PatternSequencing.integration.test.tsx  StepEditMode.test.tsx  StepEditor.integration.test.tsx  StepGrid.test.tsx
mpc2000xl-frontend/src/components/ai/: AIBeatGenerator.tsx
mpc2000xl-frontend/src/components/lcd/: LoadMode.tsx  MainMode.tsx  ProgramMode.tsx  SaveMode.tsx  StepEditMode.tsx  SwingMode.tsx  TrimMode.tsx
mpc2000xl-frontend/src/contexts/: ThemeContext.tsx
mpc2000xl-frontend/src/utils/: api.ts  audio.ts  defaultBanks.ts  soundBank.ts  soundBankLoader.ts  swing.ts  timeStretch.ts
mpc2000xl-frontend/src/utils/__tests__/: setup.ts  soundBank.test.ts  (+5 more)
(+2 files in other folders)
